deploy-rustic-locations.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rustic-locations
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rustic-locations
  template:
    metadata:
      labels:
        app: rustic-locations
    spec:
      containers:
        - name: rustic-locations
          image: localhost:5000/rustic-locations
          imagePullPolicy: Always
