deploy-rustic-locations-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustic-locations-service
  labels:
    app: rustic-locations
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4114
      protocol: TCP
      name: http
    - port: 50051
      targetPort: 50051
      name: grpc
  selector:
    app: rustic-locations
