deploy-rustic-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustic-parity-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: rustic
