deploy-rustic-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustic-ui-service
  labels:
    app: rustic-ui
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: rustic-ui
