deploy-rustic-services-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rustic-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: services.rustic.local
      http:
        paths:
        - path: /auth(/|$)(.*)
          backend:
            serviceName: rustic-auth-service
            servicePort: 80
        - path: /users(/|$)(.*)
          backend:
            serviceName: rustic-users-service
            servicePort: 50051
