deploy-rustic-ui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rustic-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rustic.local
      http:
        paths:
        - path: /
          backend:
            serviceName: rustic-ui-service
            servicePort: 80
